[package]
name = "bikeshed-rs"
version = "0.0.1"
authors = ["Florian Merz <fmerz@mozilla.com>"]
edition = "2018"
license = " CC0-1.0"
repository = "https://github.com/fiji-flo/bikeshed-rs"
documentation = "https://docs.rs/crate/bikeshed-rs"
keywords = ["whatwg", "w3c", "spec", "preprocessor"]
categories = ["template-engine"]
readme = "README.md"

[dependencies]
clap = "2.33.0"
regex = "1"
titlecase = "1"
chrono = "0.4"
lazy_static = "1.4.0"
maplit = "1.0.2"
kuchiki = "0.8.0"
markup5ever = "0.10.0"
